Fix Song View overflow styling
Refactored styling to mixin to set
appropriate height for either Search
or Playlist Editor view.

--- a/dev/sass/pages/_mixins.scss
+++ b/dev/sass/pages/_mixins.scss
@@ -46,7 +46,9 @@
   background-color: rgba(#E84F89, .9); // Change color?
 }
 
-@mixin preventResultsOverflow {
-  height: 45vh;
+
+// preventResultsOverflow prevents song item results from pushing React player to bottom of page
+@mixin prevent-overflow-container($height: 45vh) {
+  height: $height;
   overflow: scroll;
 }
