--- a/dev/sass/pages/_search.scss
+++ b/dev/sass/pages/_search.scss
@@ -7,3 +7,7 @@
     @include inputStyling;
   }
 }
+
+.prevent-search-overflow {
+  @include prevent-overflow-container;
+}
