--- a/dev/sass/pages/_songview.scss
+++ b/dev/sass/pages/_songview.scss
@@ -1,10 +1,3 @@
-@import "mixins";
-
-// preventResultsOverflow prevents song item results from pushing React player to bottom of page
-.search-song-view-container {
-  @include preventResultsOverflow;
-}
-
 .song-item {
   display: flex;
   justify-content: space-between;
